# rede-neural-para-previsao-de-churn

./: MakeFile  README.md  docker-compose.yml  dockerfile  main.py  model_card.json  pyproject.toml  requirements.txt
Notebooks/: 01_eda.ipynb  EDA_and_Baseline.ipynb
data/: Telco_customer_churn.csv
data/raw/: Telco_customer_churn.xlsx
docs/: ARQUITETURA.md  MONITORAMENTO.md  ml_canvas_churn.py
mlruns/0/: meta.yaml
mlruns/218129865244168225/: meta.yaml
mlruns/218129865244168225/2521552c813f43f38a96c1853db93927/: meta.yaml
mlruns/218129865244168225/47a86065d2ac48f4b59b5b3d6f82d7bf/: meta.yaml
mlruns/218129865244168225/51fbf9edfdd24d01a1f9a8bcef7498ee/: meta.yaml
mlruns/218129865244168225/6e3b0e040b9142bca2fb534ab105e1ae/: meta.yaml
mlruns/218129865244168225/7a72047f9b384d2fa41f05eef359ff15/: meta.yaml
mlruns/218129865244168225/90adc4caa7b543358395b7e2b872f3c1/: meta.yaml
mlruns/218129865244168225/938a4b05229f40b7acd88e8f6e4b4601/: meta.yaml
mlruns/218129865244168225/95c149372ca148cfb2571aadac1700c1/: meta.yaml
mlruns/218129865244168225/b8d2ca2762944ba3977156ecd046c2b8/: meta.yaml
mlruns/218129865244168225/c0a9ec97b3fa4e5ca7924d45e8e8a993/: meta.yaml
mlruns/218129865244168225/c9ae74ab9f8741109a2135ae78643efb/: meta.yaml
mlruns/752084729915243782/: meta.yaml
mlruns/858036838048990654/: meta.yaml
models/: baseline_model.pth  preprocessor.pkl
src/: compare_baseline.py  train.py  utils.py
src/api/: main.py
src/data/: dataset.py  preprocessing.py  schema.py
src/models/: mlp_model.py
tests/: test_api.py  test_schema.py
(+416 files in other folders)
