[project]
name = "pipeline-para-previsao-de-churn"
version = "1.0.0"
description = "TechChallenge FIAP - Pipeline de previsão de Churn com MLP"
authors = [
    {name = "Eduardo", email = "eduardokaiser268@gmail.com"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pandera>=0.17.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "torch>=2.11.0",
    "mlflow>=3.11.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
